--- a/controller/templates/about.html
+++ b/controller/templates/about.html
@@ -99,7 +99,7 @@
                                             <a target="_blank" href="https://github.com/vulhub/vulhub">https://github.com/vulhub/vulhub</a><br>
                                             The Current Version:
                                             {% if vh_version == ".git" %}
-                                            <span class="label label-warning">Not Found vulhub/.git/ dir</span>
+                                            <span class="label label-warning">Not Found vulhub/.git/FETCH_HEAD file</span>
                                             {% elif vh_version == "None" %}
                                             <span class="label label-danger">Not Found vulhub</span>
                                             {% else %}
